Add prereqs to shipyard init

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3"
 
 services:
   php:
+    labels:
+      shipyard.init: composer install && php artisan migrate --seed && npm install
     container_name: php_main
     build:
       context: .
