--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php:
     labels:
       shipyard.init: composer install && php artisan migrate --seed && npm install
-    container_name: php_main
+    container_name: phpMain
     build:
       context: .
       dockerfile: .docker/php/Dockerfile
@@ -49,7 +49,7 @@ services:
       - nginx:daybydaycrm.test
 
   db:
-    container_name: db_main
+    container_name: dbMain
     image: mysql:5.7
     volumes:
       - dbdata:/var/lib/mysql
@@ -66,7 +66,7 @@ services:
       - service_net
 
   nginx:
-    container_name: nginx_main
+    container_name: nginxMain
     build:
       context: .
       dockerfile: ./.docker/nginx/Dockerfile
@@ -84,7 +84,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.1
-    container_name: elasticsearch_main
+    container_name: elasticsearchMain
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
@@ -102,7 +102,7 @@ services:
 
   elasticsearch2:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.1
-    container_name: elasticsearch_second
+    container_name: elasticsearchSecond
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
@@ -121,7 +121,7 @@ services:
 
   redis:
     image: 'bitnami/redis:latest'
-    container_name: redis_main
+    container_name: redisMain
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
